--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -334,7 +334,6 @@ tr:
       contact_heading: Bize ne bildirmek istersin?
     shared:
       new:
-        city_placeholder: 
         email_placeholder:
           required:
             'false': E-Mail adresi (opsiyonel)
@@ -482,7 +481,6 @@ tr:
         '326': 326
         '568': 568
         '639': 639
-        aar: Aar
         abk: Abk
         amh: Amh
         ara: Ara
@@ -496,9 +494,7 @@ tr:
         bos: Bos
         bul: Bul
         cau: Cau
-        ckb: Ckb
         cpe: Cpe
-        cus: Cus
         cze: Cze
         deu: Deu
         dyu: Dyu
@@ -525,7 +521,6 @@ tr:
         luo: Luo
         man: Man
         mkd: Mkd
-        msa: Msa
         mul: Mul
         nor: Nor
         pol: Pol
@@ -549,7 +544,6 @@ tr:
         tgk: Tgk
         tgl: Tgl
         tha: Tha
-        tig: Tig
         tir: Tir
         tuk: Tuk
         tur: Tur
@@ -706,7 +700,6 @@ tr:
         '326': Ukraynaca - українська
         '568': Felemenkçe - Nederlands
         '639': Farsça - دری
-        aar: 'Afar - Qafar-áf '
         abk: Abhazca - аҧсуа бызшәа
         amh: Amharca - አማርኛ
         ara: Arapça - عربي
@@ -720,9 +713,7 @@ tr:
         bos: Boşnakça - bosanski
         bul: Bulgarca - български
         cau: Abazaca - абаза бызшва
-        ckb: Soranice - سۆرانی
         cpe: Kamtok - Pidgin
-        cus: Saho - ሳሆኛ
         cze: Çekçe - čeština
         deu: Almanca - Deutsch
         dyu: Jula - Julakan
@@ -749,7 +740,6 @@ tr:
         luo: Luo - Dholuo
         man: Maninka - Maninka
         mkd: Makedonca - македонски
-        msa: Malayca – بهاس ملايو
         mul: Talep üzerine diğer diller
         nor: Norveççe - Norsk
         pol: Lehçe - polski
@@ -773,7 +763,6 @@ tr:
         tgk: Tacikçe - тоҷикӣ / تاجیکی
         tgl: Tagalogca - Tagálog
         tha: Tayca - ภาษาไทย
-        tig: Tigre - ትግሬ
         tir: Tigrinya dili - ትግርኛ
         tuk: Türkmence - Türkmençe / Tүркменче
         tur: Türkçe - Türkçe
@@ -868,12 +857,6 @@ tr:
           pl: Polski
           ru: Русский
           tr: Türkçe
-        meta_description:
-          family: 
-          refugees: 
-        meta_title:
-          family: 
-          refugees: 
         section_link:
           desktop:
             family: 
@@ -886,10 +869,6 @@ tr:
               family: 
               refugees: 
         title: Otomatik çeviriler
-  offer:
-    stamp:
-      target_audience:
-        family_acquaintances: 
   offers:
     index:
       filters:
@@ -986,8 +965,6 @@ tr:
         heading: Konu nedir?
       who: Nerede yardım bulabilirim?
       who_contact_people:
-        NicoleTest: 
-        PeterFriesen: 
         dr: Dr.
         email: 'E-Mail: '
         fax: 'Faks: '
@@ -1131,12 +1108,6 @@ tr:
       how:
         heading: Clarat nasıl çalışıyor?
         text: Hangi problem için yardıma ihtiyacın olduğunu ya da hangi konunun seni rahatsız ettiğini belirle. Ayrıca menümüzdeki kategorilerden de seçebilirsin. Bu sayede sana en yakın destek önerilerini göreceksin. Sana nasıl yardım alabileceğini de anlatıyoruz. Yardım almak için telefon açabilir, mail atabilir veya şahsen ofisimize gelebilirsin.
-      meta_description:
-        family: 
-        refugees: 
-      meta_title:
-        family: 
-        refugees: 
       title:
         family: Çocuk, genç ve aileler için destek programları
         refugees: Mülteciler için destek programları
@@ -1227,8 +1198,10 @@ tr:
       intro_second_part: Im Folgenden möchten wir Sie über Art, Umfang und Zweck der Erhebung und Verwendung personenbezogener Daten unterrichten. Sie können diese Unterrichtung jederzeit auf unserer Webseite abrufen. Die clarat gGmbH behält sich Änderungen dieser Datenschutzhinweise vor. Es empfiehlt sich daher, die Datenschutzweise erneut aufzurufen, wenn Sie unsere Webseite nach längerer Zeit wieder besuchen.
       title: Datenschutz
     section_choice:
-      meta_description: 
-      meta_title: 
+      family:
+        title: 
+      refugees:
+        title: 
       title: 
     shared:
       address:
@@ -1241,8 +1214,6 @@ tr:
   routes:
     '404': "'404'"
     contacts: iletişim
-    danke: 
-    dankeschoen: 
     datenschutzhinweise: gizlilik-politikası
     definitions: tanım
     emails: emailler
@@ -1300,13 +1271,6 @@ tr:
         button: E-bülten aboneliği
         placeholder: E-Mail Adresi
   success: Teşekkür ederiz. Çok yakında senin bulunduğun yerde de desteklerimiz olacak. Bu gerçekleşince tarafımızdan bir e-mail alacaksın.
-  t:
-    contacts:
-      new:
-        contact_heading: 
-      shared:
-        new:
-          send_us_a_message: 
   update_requests:
     create:
       success: |
