--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -408,7 +408,6 @@ fr:
       contact_heading: Tu voudrais nous dire quoi?
     shared:
       new:
-        city_placeholder: 
         email_placeholder:
           required:
             'false': adresse électronique (facultatif)
@@ -558,7 +557,6 @@ fr:
         '326': 326
         '568': 568
         '639': 639
-        aar: Aar
         abk: Abk
         amh: Amh
         ara: Ara
@@ -572,9 +570,7 @@ fr:
         bos: Bos
         bul: Bul
         cau: Cau
-        ckb: Ckb
         cpe: Cpe
-        cus: Cus
         cze: Cze
         deu: Deu
         dyu: Dyu
@@ -601,7 +597,6 @@ fr:
         luo: Luo
         man: Man
         mkd: Mkd
-        msa: Msa
         mul: Mul
         nor: Nor
         pol: Pol
@@ -625,7 +620,6 @@ fr:
         tgk: Tgk
         tgl: Tgl
         tha: Tha
-        tig: Tig
         tir: Tir
         tuk: Tuk
         tur: Tur
@@ -787,7 +781,6 @@ fr:
         '326': Ukrainien - українська
         '568': Néerlandais - Nederlands
         '639': Dari - دری
-        aar: 'L''afar - Qafar-áf '
         abk: Abkhaze - аҧсуа бызшәа
         amh: Amharique - አማርኛ
         ara: Arabe - عربي
@@ -801,9 +794,7 @@ fr:
         bos: Bosnien - bosanski
         bul: Bulgare - български
         cau: Abaza - абаза бызшва
-        ckb: 'Sorani - سۆرانی '
         cpe: Pidgin camerounais - Pidgin
-        cus: Saho - ሳሆኛ
         cze: Tchèque - čeština
         deu: Allemand - Deutsch
         dyu: dioula - julakan
@@ -830,7 +821,6 @@ fr:
         luo: Luo - Dholuo
         man: Malinké - Maninka
         mkd: Macédonien - македонски
-        msa: Malais – بهاس ملايو
         mul: autres langues sur demande
         nor: Norvégien - Norsk
         pol: Polonais - polski
@@ -854,7 +844,6 @@ fr:
         tgk: Tadjik - тоҷикӣ / تاجیکی
         tgl: Tagalog - Tagálog
         tha: Thaï - ภาษาไทย
-        tig: Tigré - ትግሬ
         tir: Tigrigna - ትግርኛ
         tuk: Turkmène - Türkmençe / Tүркменче
         tur: Turc - Türkçe
@@ -940,12 +929,6 @@ fr:
           pl: Polski
           ru: Русский
           tr: Türkçe
-        meta_description:
-          family: 
-          refugees: 
-        meta_title:
-          family: 
-          refugees: 
         section_link:
           desktop:
             family: "‹ aller à la page clarat refugees"
@@ -958,10 +941,6 @@ fr:
               family: aller à la page <span class="top-bar__emphasis">clarat refugees</span>
               refugees: aller à la page <span class="top-bar__emphasis">clarat family</span>
         title: Traductions automatiques
-  offer:
-    stamp:
-      target_audience:
-        family_acquaintances: 
   offers:
     index:
       filters:
@@ -1054,8 +1033,6 @@ fr:
         heading: De quoi s'agit-il?
       who: Qui propose cette aide ?
       who_contact_people:
-        NicoleTest: 
-        PeterFriesen: 
         dr: Dr.
         email: 'E-mail:'
         fax: 'Fax:'
@@ -1191,12 +1168,6 @@ fr:
 
 '
         text: Tape dans le champ de recherche le problème pour lequel tu as besoin d’aide. Ou ce qui t’inquiète. Ou choisis parmi nos thèmes. Tu verras toutes les offres d’aide près de chez toi. On t’explique aussi comment tu peux recevoir de l’aide. C’est-à-dire, s’il faut appeler quelqu’un ou s’il faut écrire un courriel. Ou si tu peux tout simplement passer.
-      meta_description:
-        family: 
-        refugees: 
-      meta_title:
-        family: 
-        refugees: 
       title:
         family: Offres d'aide pour les enfants, les ados et les familles
         refugees: Offres d'aide pour les réfugiés
@@ -1288,8 +1259,10 @@ fr:
       intro_second_part: Im Folgenden möchten wir Sie über Art, Umfang und Zweck der Erhebung und Verwendung personenbezogener Daten unterrichten. Sie können diese Unterrichtung jederzeit auf unserer Webseite abrufen. Die clarat gGmbH behält sich Änderungen dieser Datenschutzhinweise vor. Es empfiehlt sich daher, die Datenschutzweise erneut aufzurufen, wenn Sie unsere Webseite nach längerer Zeit wieder besuchen.
       title: Datenschutz
     section_choice:
-      meta_description: 
-      meta_title: 
+      family:
+        title: 
+      refugees:
+        title: 
       title: Choisis ton monde clarat
     shared:
       address:
@@ -1302,8 +1275,6 @@ fr:
   routes:
     '404': "'404'"
     contacts: contact
-    danke: 
-    dankeschoen: 
     datenschutzhinweise: protection-des-données
     definitions: définitions
     emails: adresses-électroniques
@@ -1352,13 +1323,6 @@ fr:
         button: s'abonner à la newsletter
         placeholder: adresse électronique
   success: Merci beaucoup. Nous allons bientôt avoir des propositions d'aide près de chez toi. Dès que cela est le cas, tu vas recevoir un e-mail de notre part.
-  t:
-    contacts:
-      new:
-        contact_heading: 
-      shared:
-        new:
-          send_us_a_message: 
   update_requests:
     create:
       success: Merci beaucoup, nous avons bien reçu ton message. Dès que nous serons actifs près de chez toi, nous nous manifesterons.
