--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -450,7 +450,6 @@ pl:
       contact_heading: Czym chcesz się z nami podzielić?
     shared:
       new:
-        city_placeholder: 
         email_placeholder:
           required:
             'false': Adres e-mail (Opcjonalnie)
@@ -606,7 +605,6 @@ pl:
         '326': 326
         '568': 568
         '639': 639
-        aar: Aar
         abk: Abk
         amh: Amh
         ara: Ara
@@ -620,9 +618,7 @@ pl:
         bos: Bos
         bul: Bul
         cau: Cau
-        ckb: Ckb
         cpe: Cpe
-        cus: Cus
         cze: Cze
         deu: Deu
         dyu: Dyu
@@ -649,7 +645,6 @@ pl:
         luo: Luo
         man: Man
         mkd: Mkd
-        msa: Msa
         mul: Mul
         nor: Nor
         pol: Pol
@@ -673,7 +668,6 @@ pl:
         tgk: Tgk
         tgl: Tgl
         tha: Tha
-        tig: Tig
         tir: Tir
         tuk: Tuk
         tur: Tur
@@ -833,7 +827,6 @@ pl:
         '326': Język ukraiński - українська
         '568': Język niderlandzki - Nederlands
         '639': Język perski (dari) - دری
-        aar: 'Język afar - Qafar-áf '
         abk: Język abchaski - аҧсуа бызшәа
         amh: Język amharski - አማርኛ
         ara: Język arabski - عربي
@@ -847,9 +840,7 @@ pl:
         bos: Język bośniacki - bosanski
         bul: Język bułgarski - български
         cau: Język abazyński - абаза бызшва
-        ckb: 'Język sorani - سۆرانی '
         cpe: Język kamtok - Pidgin
-        cus: Język Saho - ሳሆኛ
         cze: Język czeski - čeština
         deu: Język niemiecki - Deutsch
         dyu: Język diula - julakan
@@ -876,7 +867,6 @@ pl:
         luo: Język luo - Dholuo
         man: Maninka - Maninka
         mkd: Język macedoński - македонски
-        msa: Język malajski – بهاس ملايو
         mul: inne języki na życzenie
         nor: Język norweski - Norsk
         pol: Język polski - polski
@@ -900,7 +890,6 @@ pl:
         tgk: Język tadżycki - тоҷикӣ / تاجیکی
         tgl: Język tagalski - Tagálog
         tha: Język tajski - ภาษาไทย
-        tig: Język tigre - ትግሬ
         tir: Język tigrinia - ትግርኛ
         tuk: Język turkmeński - Türkmençe / Tүркменче
         tur: Język turecki - Türkçe
@@ -984,12 +973,6 @@ pl:
           pl: Polski
           ru: Русский
           tr: Türkçe
-        meta_description:
-          family: 
-          refugees: 
-        meta_title:
-          family: 
-          refugees: 
         section_link:
           desktop:
             family: do clarat refugees
@@ -1002,10 +985,6 @@ pl:
               family: zmień na <span class="top-bar__emphasis">clarat refugees</span>
               refugees: 'zmień na <span class="top-bar__emphasis">clarat family</span> '
         title: Automatyczne Tłumaczenia!
-  offer:
-    stamp:
-      target_audience:
-        family_acquaintances: 
   offers:
     index:
       filters:
@@ -1102,8 +1081,6 @@ pl:
         heading: O co chodzi?
       who: Kto oferuje tę pomoc?
       who_contact_people:
-        NicoleTest: 
-        PeterFriesen: 
         dr: Dr
         email: 'E-mail:'
         fax: 'fax:'
@@ -1243,12 +1220,6 @@ pl:
       how:
         heading: Jak funkcjonuje clarat?
         text: Wpisz, jaki masz problem. Albo co przysparza Ci zmartwień. Lub wybierz z tematów przez nas zaproponowanych. Zaraz wyświetlą się oferty pomocy w twojej okolicy. My wskażemy Ci również, w jaki sposób uzyskasz pomoc. Czyli, czy masz zadzwonić, napisać e-mail, czy udać się we wskazane miejsce.
-      meta_description:
-        family: 
-        refugees: 
-      meta_title:
-        family: 
-        refugees: 
       title:
         family: Oferty wsparcia dla dzieci, młodzieży i rodzin
         refugees: Oferty wsparcia dla uchodźców
@@ -1338,8 +1309,10 @@ pl:
       intro_second_part: Im Folgenden möchten wir Sie über Art, Umfang und Zweck der Erhebung und Verwendung personenbezogener Daten unterrichten. Sie können diese Unterrichtung jederzeit auf unserer Webseite abrufen. Die clarat gGmbH behält sich Änderungen dieser Datenschutzhinweise vor. Es empfiehlt sich daher, die Datenschutzweise erneut aufzurufen, wenn Sie unsere Webseite nach längerer Zeit wieder besuchen.
       title: Datenschutz
     section_choice:
-      meta_description: 
-      meta_title: 
+      family:
+        title: 
+      refugees:
+        title: 
       title: Wybierz swój clarat-świat
     shared:
       address:
@@ -1352,8 +1325,6 @@ pl:
   routes:
     '404': "'404'"
     contacts: kontakt
-    danke: 
-    dankeschoen: 
     datenschutzhinweise: ochrona-danych
     definitions: definicje
     emails: e-maile
@@ -1402,13 +1373,6 @@ pl:
         button: Zapisz się na newsletter
         placeholder: adres e-mail
   success: Dziękujemy. Wkrótce będziemy mieli oferty w Twojej okolicy. Wtedy otrzymasz od nas wiadomość e-mail.
-  t:
-    contacts:
-      new:
-        contact_heading: 
-      shared:
-        new:
-          send_us_a_message: 
   update_requests:
     create:
       success: Dziękujemy, otrzymaliśmy Twoją wiadomość. Kiedy tylko staniemy się aktywni w Twojej okolicy, damy Ci znać.
