--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -432,6 +432,8 @@ ru:
       contact_heading: Чем ты хочешь с нами поделиться?
     shared:
       new:
+        back_to_hp: 
+        city_placeholder: 
         email_placeholder:
           required:
             'false': E-Mail адрес (обязательно)
@@ -581,6 +583,7 @@ ru:
         '326': 326
         '568': 568
         '639': 639
+        aar: Aar
         abk: Abk
         amh: Amh
         ara: Ara
@@ -594,7 +597,9 @@ ru:
         bos: Bos
         bul: Bul
         cau: Cau
+        ckb: Ckb
         cpe: Cpe
+        cus: Cus
         cze: Cze
         deu: Deu
         dyu: Dyu
@@ -621,6 +626,7 @@ ru:
         luo: Luo
         man: Man
         mkd: Mkd
+        msa: Msa
         mul: Mul
         nor: Nor
         pol: Pol
@@ -644,6 +650,7 @@ ru:
         tgk: Tgk
         tgl: Tgl
         tha: Tha
+        tig: Tig
         tir: Tir
         tuk: Tuk
         tur: Tur
@@ -654,11 +661,6 @@ ru:
         wol: Wol
         zho: Zho
         zza: Zza
-        aar: Aar
-        ckb: Ckb
-        cus: Cus
-        msa: Msa
-        tig: Tig
       section:
         family: Family
         refugees: Refugees
@@ -810,6 +812,7 @@ ru:
         '326': Украинский язык - українська
         '568': Нидерландский язык - Nederlands
         '639': Персидский язык - دری
+        aar: 'Афарский - Qafar-áf '
         abk: Абхазский язык - аҧсуа бызшәа
         amh: Амхарский язык - አማርኛ
         ara: Арабский язык - عربي
@@ -823,7 +826,9 @@ ru:
         bos: Боснийский язык - bosanski
         bul: Болгарский язык - български
         cau: Абазинский язык - абаза бызшва
+        ckb: 'Сорани́ - سۆرانی '
         cpe: Камток-Пиджин
+        cus: Сaxo - ሳሆኛ
         cze: Чешский язык - čeština
         deu: Немецкий язык - Deutsch
         dyu: Дьюла - Julakan
@@ -850,6 +855,7 @@ ru:
         luo: Долуо - Dholuo
         man: Манинка-Манинка
         mkd: Македонский язык - македонски
+        msa: Мала́йский язы́к – بهاس ملايو
         mul: другие языки по запросу
         nor: Норвежский язык - Norsk
         pol: Польский язык - polski
@@ -873,6 +879,7 @@ ru:
         tgk: Таджикский язык - тоҷикӣ / تاجیکی
         tgl: Тагальский язык - Tagálog
         tha: Тайский язык - ภาษาไทย
+        tig: Тигре - ትግሬ
         tir: Тигринья - ትግርኛ
         tuk: Туркменский язык - Türkmençe / Tүркменче
         tur: Турецкий язык - Türkçe
@@ -883,11 +890,6 @@ ru:
         wol: Волоф язык - wɔlɔf
         zho: Китайский язык - 普通话 / 普通話
         zza: Зазаки - Zazaki / Kırmancki
-        aar: 'Афарский - Qafar-áf '
-        ckb: 'Сорани́ - سۆرانی '
-        cus: Сaxo - ሳሆኛ
-        msa: Мала́йский язы́к – بهاس ملايو
-        tig: Тигре - ትግሬ
     shariff:
       share_label: Разделить
     single_search_result:
@@ -1004,7 +1006,6 @@ ru:
             girls_only: только для девочек и женщин
           target_audience:
             children: для детей и молодежи
-            family_acquaintances: 
             family_children: для детей и молодежи
             family_nuclear_family: для семей
             family_parents: для родителей
@@ -1213,6 +1214,12 @@ ru:
       how:
         heading: Kак работает clarat?
         text: Напиши, в чем именно у тебя проблемы. Или что тебя волнует. Либо выбери из предложенных тем. Ты сразу же найдешь рядом с тобой по близости все возможные варианты помощи и поддержки. Мы так же расскажем тебе, как ты можешь получить эту помощь. Позвони, напиши email или просто приходи.
+      meta_description:
+        family: 
+        refugees: 
+      meta_title:
+        family: 
+        refugees: 
       title:
         family: Предложения помощи для детей, молодежи и семей
         refugees: Предложения помощи для беженцев
@@ -1300,10 +1307,8 @@ ru:
       intro_second_part: Im Folgenden möchten wir Sie über Art, Umfang und Zweck der Erhebung und Verwendung personenbezogener Daten unterrichten. Sie können diese Unterrichtung jederzeit auf unserer Webseite abrufen. Die clarat gGmbH behält sich Änderungen dieser Datenschutzhinweise vor. Es empfiehlt sich daher, die Datenschutzweise erneut aufzurufen, wenn Sie unsere Webseite nach längerer Zeit wieder besuchen.
       title: Datenschutz
     section_choice:
-      family:
-        title: 
-      refugees:
-        title: 
+      meta_description: 
+      meta_title: 
       title: Пожалуйста,  выберите ваш мир clarat
     shared:
       address:
