--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -305,6 +305,8 @@ ar:
       contact_heading: ماذا تريد أن تخبرنا؟
     shared:
       new:
+        back_to_hp: 
+        city_placeholder: 
         email_placeholder:
           required:
             'false': البريد الإليكتروني (إختياري)
@@ -463,6 +465,7 @@ ar:
         '326': 326
         '568': 568
         '639': 639
+        aar: Aar
         abk: Abk
         amh: Amh
         ara: Ara
@@ -476,7 +479,9 @@ ar:
         bos: Bos
         bul: Bul
         cau: Cau
+        ckb: Ckb
         cpe: Cpe
+        cus: Cus
         cze: Cze
         deu: Deu
         dyu: Dyu
@@ -503,6 +508,7 @@ ar:
         luo: Luo
         man: Man
         mkd: Mkd
+        msa: Msa
         mul: Mul
         nor: Nor
         pol: Pol
@@ -526,6 +532,7 @@ ar:
         tgk: Tgk
         tgl: Tgl
         tha: Tha
+        tig: Tig
         tir: Tir
         tuk: Tuk
         tur: Tur
@@ -536,11 +543,6 @@ ar:
         wol: Wol
         zho: Zho
         zza: Zza
-        aar: Aar
-        ckb: Ckb
-        cus: Cus
-        msa: Msa
-        tig: Tig
       section:
         family: Family
         refugees: Refugees
@@ -691,6 +693,7 @@ ar:
         '326': " لغة أوكرانية - українська"
         '568': " لغة هولندية - Nederlands"
         '639': " لغة فارسية - دری"
+        aar: 'لغة عفارية - Qafar-áf '
         abk: لغة أبخازية - аҧсуа бызшәа
         amh: لغة أمهرية - አማርኛ
         ara: " لغة عربية - عربي"
@@ -704,7 +707,9 @@ ar:
         bos: لغة بوسنوية - bosanski
         bul: لغة بلغارية - български
         cau: لغة أباظية - абаза бызшва
+        ckb: لهجة كردية سورانية - سۆرانی
         cpe: الكاميروني - Pidgin
+        cus: لغة ساهو - ሳሆኛ
         cze: لغة تشيكية - čeština
         deu: لغة ألمانية - Deutsch
         dyu: الديولا - Julakan
@@ -731,6 +736,7 @@ ar:
         luo: لوو - Dholuo
         man: " الغيلية - Maninka"
         mkd: لغة مقدونية - македонски
+        msa: لغة ملايو – بهاس ملايو
         mul: لغات أخرى عند الطلب
         nor: لغة نرويجية - Norsk
         pol: لغة بولندية - polski
@@ -754,6 +760,7 @@ ar:
         tgk: لغة طاجيكية - тоҷикӣ / تاجیکی
         tgl: لغة تاغالوغية - Tagálog
         tha: لغة تايلندية - ภาษาไทย
+        tig: لغة تجرية - ትግሬ
         tir: لغة تغرينية - ትግርኛ
         tuk: لغة تركمانية - Türkmençe / Tүркменче
         tur: لغة تركية - Türkçe
@@ -764,11 +771,6 @@ ar:
         wol: لغة ولوفية - wɔlɔf
         zho: لغة صينية - 普通话 / 普通話
         zza: لغة زازاكية - Zazaki / Kırmancki
-        aar: 'لغة عفارية - Qafar-áf '
-        ckb: لهجة كردية سورانية - سۆرانی
-        cus: لغة ساهو - ሳሆኛ
-        msa: لغة ملايو – بهاس ملايو
-        tig: لغة تجرية - ትግሬ
     shariff:
       share_label: 
     single_search_result:
@@ -891,7 +893,6 @@ ar:
             girls_only: فقط للبنات والسيدات
           target_audience:
             children: للأطفال والشباب
-            family_acquaintances: 
             family_children: للأطفال والشبان
             family_nuclear_family: للأسر
             family_parents: للآباء
@@ -1097,6 +1098,16 @@ ar:
       how:
         heading: كيف تعمل كلارات؟
         text: أكتب المشكلة التي تحتاح مساعدة في حلها, او التي تقلقك. يمكنك أيضا أن تختار من الموضوعات الموجودة لدينا, فتري في الحال كل العروض التي تقدم الدعم بالقرب منك. وكذلك تعرف أيضا, كيف تحصل على المساعدة و بأي  وسيلة إتصال, سواء عن طريق التليفون أو إرسال إيميل أو الذهاب الي عنوان ما
+      meta_description:
+        family: |-
+          "مع كلارات العائلة تجد بسهولة المساعدة.
+          عروض الدعم للاطفال، الشباب، والعائلات. عبر الانترنت. حالياً. في كل برلين."
+        refugees: |-
+          "مع كلارات اللاجئين تجد بسهولة المساعدة.
+          عروض الدعم للاجئين. عبر الانترنت. حالياً. متعدد اللغات. في كل المانيا."
+      meta_title:
+        family: إيجاد المساعدة ببساطة | كلارات العائلة
+        refugees: إيجاد المساعدة ببساطة | كلارات اللاجئين
       title:
         family: عروض دعم للأطفال والشبان والأسر
         refugees: عروض مساعدة للاجئين
@@ -1184,10 +1195,8 @@ ar:
       intro_second_part: Im Folgenden möchten wir Sie über Art, Umfang und Zweck der Erhebung und Verwendung personenbezogener Daten unterrichten. Sie können diese Unterrichtung jederzeit auf unserer Webseite abrufen. Die clarat gGmbH behält sich Änderungen dieser Datenschutzhinweise vor. Es empfiehlt sich daher, die Datenschutzweise erneut aufzurufen, wenn Sie unsere Webseite nach längerer Zeit wieder besuchen.
       title: Datenschutz
     section_choice:
-      family:
-        title: 
-      refugees:
-        title: 
+      meta_description: 'تقوم كلارات بالإرشاد لشبكة ضخمة من خدمات الدعم في المانيا. للاطفال، الشباب، العائلات واللاجئين. عبر الانترنت. ببساطة. في الجوار. '
+      meta_title: كلارات توضح | كلارات
       title: إختر قسم كلارات الذي يخصك
     shared:
       address:
