--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -16,7 +16,7 @@ fa:
         search_location: NOTRANSLATE
     models:
       contact: NOTRANSLATE
-      search_location: جستجوی مکان
+      search_location: NOTRANSLATE
       subscription: NOTRANSLATE
       update_request: NOTRANSLATE
   cells:
@@ -380,6 +380,8 @@ fa:
       contact_heading: جه جیزی را می خواهی با ما در میان بگذاری؟
     shared:
       new:
+        back_to_hp: 
+        city_placeholder: 
         email_placeholder:
           required:
             'false': آدرس ایمیل اختیاری
@@ -525,6 +527,7 @@ fa:
         '326': ۳۲۶
         '568': ۵۲۸
         '639': ۶۳۹
+        aar: Aar
         abk: Abk
         amh: Amh
         ara: Ara
@@ -538,7 +541,9 @@ fa:
         bos: Bos
         bul: Bul
         cau: Cau
+        ckb: Ckb
         cpe: Cpe
+        cus: Cus
         cze: Cze
         deu: Deu
         dyu: Dyu
@@ -565,6 +570,7 @@ fa:
         luo: Luo
         man: Man
         mkd: Mkd
+        msa: Msa
         mul: Mul
         nor: Nor
         pol: Pol
@@ -588,6 +594,7 @@ fa:
         tgk: Tgk
         tgl: Tgl
         tha: Tha
+        tig: Tig
         tir: Tir
         tuk: Tuk
         tur: Tur
@@ -598,11 +605,6 @@ fa:
         wol: Wol
         zho: Zho
         zza: Zza
-        aar: Aar
-        ckb: Ckb
-        cus: Cus
-        msa: Msa
-        tig: Tig
       section:
         family: خانواده
         refugees: پناهندگان
@@ -769,6 +771,7 @@ fa:
         '326': اوکراینی - українська
         '568': هلندی - Nederlands
         '639': دری
+        aar: 'زبان عفار - Qafar-áf '
         abk: زبان آبخازی - аҧсуа бызшәа
         amh: امهری - አማርኛ
         ara: عربی
@@ -782,7 +785,9 @@ fa:
         bos: بوسنیایی - bosanski
         bul: بلغاری - български
         cau: زبان آبازی - абаза бызшва
+        ckb: 'سورانی - سۆرانی '
         cpe: کامرونی - Pidgin
+        cus: Saho - ሳሆኛ
         cze: چکی - čeština
         deu: آلمانی
         dyu: دیولا - Julakan
@@ -809,6 +814,7 @@ fa:
         luo: لوآیی - Dholuo
         man: مانینکایی -  Maninka
         mkd: مقدونیه ای - македонски
+        msa: زبان مالایی – بهاس ملايو
         mul: بقیه زبانها با توجه به درخواست
         nor: نروژی - Norsk
         pol: لهستانی -  polski
@@ -832,6 +838,7 @@ fa:
         tgk: تاجیکی - тоҷикӣ / تاجیکی
         tgl: تاگالوگ -  Tagálog
         tha: تایلندی - ภาษาไทย
+        tig: زبان تیگره - ትግሬ
         tir: " تیگرینیا - ትግርኛ"
         tuk: ترکمنی - Türkmençe / Tүркменче
         tur: ترکی - Türkçe
@@ -842,11 +849,6 @@ fa:
         wol: ولفی - wɔlɔf
         zho: چینی - 普通话 / 普通話
         zza: دیملی -  Zazaki / Kırmancki
-        aar: 'زبان عفار - Qafar-áf '
-        ckb: 'سورانی - سۆرانی '
-        cus: Saho - ሳሆኛ
-        msa: زبان مالایی – بهاس ملايو
-        tig: زبان تیگره - ትግሬ
     shariff:
       share_label: تقسیم کردن
     single_search_result:
@@ -952,7 +954,6 @@ fa:
             girls_only: فقط برای دختران و بانوان
           target_audience:
             children: برای بچه ها و جوانان
-            family_acquaintances: 
             family_children: برای بچه ها و جوانان
             family_nuclear_family: برای خانواده ها
             family_parents: برای والدین
@@ -1122,6 +1123,12 @@ fa:
       how:
         heading: clarat چگونه عمل می کند؟
         text: مشکل و همچنین کمک درخواستی خود را وارد کنید و یا اینکه از موضوعات ما انتخاب کنید.بعد از آن تمام پیشنهاد های حمایتی در نزدیکی محل سکونت خود را می بینی.ما به تو نیز می گوییم که چگونه کمک دریافت کنی.اینکه تو آیا تلفن یا ایمیل بزنی و یا اینکه حضوری مراجعه کنی.
+      meta_description:
+        family: 
+        refugees: 
+      meta_title:
+        family: 
+        refugees: 
       title:
         family: پیشنهاد های حمایتی برای کودکان٬جوانان و خانواده ها
         refugees: پیشنهاد های حمایتی برای پناهندگان
@@ -1200,10 +1207,8 @@ fa:
       intro_second_part: در ادامه شما را از روش٬هدف استفاده از اطلاعات شخصی فرد متقاضی آگاه خواهیم کرد.شما می توانید اطلاعات بیشتر در این ضمینه را از وبسایت ما بازخوانی کنید.clarat gGmbH آگاهی دادن در تغییرات اطلاعات را مشروط می داند.اگر پس از مدت طولانی از وبسایت ما دوباره بازدید می کنید به شما توصیه می شود مجدد موارد مربوط به حفاظت اطلاعات شخصی خود را فراخوانید.
       title: حفاظت از اطلاعات
     section_choice:
-      family:
-        title: 
-      refugees:
-        title: 
+      meta_description: 
+      meta_title: 
       title: لطفا موضوع خود را از دنیای clarat انتخاب کنید
     shared:
       address:
